# synthetische-onderwijsdata

./: .gitignore  CLAUDE.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: aan-de-slag.md  hoe-het-werkt.md  index.md
docs/api/: index.md
docs/javascripts/: mathjax.js
docs/stylesheets/: npuls.css
examples/: 1cijferho_example.py
src/relsynth/: __init__.py  schema.py
src/relsynth/core/: __init__.py  engine.py  samplers.py  topology.py
src/relsynth/io/: __init__.py  fwf_reader.py
src/relsynth/logic/: __init__.py  dbn.py  degree.py  sequential.py
src/relsynth/longitudinal/: __init__.py  sequential.py
src/relsynth/presets/: __init__.py  hooks.py  loader.py
src/relsynth/presets/schemas/: 1cijferho.yaml
src/synthetische_onderwijsdata/: __init__.py  schema.py  validate.py
src/synthetische_onderwijsdata/engine/: core.py  flat.py  gcm.py  hooks.py  integrity.py  loader.py  samplers.py
src/synthetische_onderwijsdata/engine/longitudinal/: __init__.py  dbn.py  degree.py  sequential.py
src/synthetische_onderwijsdata/sources/_1cijferho/: schema.yaml  splitter.py
tests/: test_integration.py  test_validate.py
tests/test_core/: test_gcm.py  test_integrity.py  test_topology.py
tests/test_flat/: test_flat_synthesizer.py
tests/test_logic/: test_dbn.py  test_degree.py
tests/test_presets/: test_hooks.py  test_loader.py
